better way of centering content

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<script src="functions.js"></script>
 </head>
 <body>
-	<div class="center">
+	<div class="center" class="container">
 		<h1>Be inspired</h1>
 	</div>
 
